<resources>
    <string name="app_name">TicTacToe</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="exit">Exit</string>
    <string-array name="menu_list">
        <item>Home</item>
        <item>Account</item>
        <item>About</item>
        <item>Exit</item>
    </string-array>
    <string name="change">Change</string>
    <string name="password">Password</string>
    <string name="new_passwd">New password</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="select_x_o">Select X or O</string>
    <string name="exit_confirmation">Are you sure?\nThe current game will be lost.</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="invalid_passwd_length">Password should atleast have atleast 6 characters</string>
    <string name="user_name_already_exists">User Name Already Exists</string>
    <string name="user_name_changed_successfully">User Name Changed Successfully</string>
    <string name="user_name_setting_failed">"Setting User Name Failed\nNetwork may be slow. Try again"</string>
    <string name="passwd_changed_successfully">Password Changed Successfully</string>
    <string name="passwd_changing_failed">Changing Password failed</string>
    <string name="won_the_game">You Won the Game!</string>
    <string name="game_tie">The Game is a Tie!</string>
    <string name="game_lost">%1$s has beaten you\nYou lose!</string>
    <string name="goes_first">%1$s goes first!</string>
    <string name="you_goes_first">You goes first!</string>
    <string name="opp_goes_first">Opponent goes first!</string>
    <string name="turn">%1$s\'s turn</string>
    <string name="your_turn">Yours turn</string>
    <string name="resetted_game">%1$s resetted the Game</string>
    <string name="you_resetted_game">You resetted the Game</string>
    <string name="started_game">%1$s started New Game</string>
    <string name="you_started_game">You started New Game</string>
    <string name="sending">Sending&#8230;</string>
    <string name="starting">Starting&#8230;</string>
    <string name="resetting">Resetting&#8230;</string>
    <string name="hint_friendname">Friend Name</string>
    <string name="search">Search</string>
    <string name="version">Version 1.1.0</string>
    <string name="by_jaisel_rahman">By Jaisel Rahman</string>
    <string name="author_mail">&lt;jaiselrahman@gmail.com&gt;</string>
    <string name="friends">Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="player">\u0020Player\u0020</string>
    <string name="computer">Computer</string>
    <string name="play_against">Play Against</string>
    <string name="play_request_send">Play Request Send\nYou will be Notified when Accepted</string>
    <string name="title_activity_add_friend">AddFriend</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="plus">+</string>
    <string name="title_activity_account">Account</string>
    <string name="nav_icon">navigation icon</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="select_opponent">Select Your Opponent</string>
    <string name="friends_online">Friends Online</string>
    <string name="result_not_found">Result Not Found!</string>
    <string name="select">Select</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="delete_account">Delete Account</string>
    <string name="login">Login</string>
    <string name="new_user_get_registered_now">New User? Get Registered Now</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_failed">Login failed</string>
    <string name="password_reset_email_send">Passwor reset email send</string>
    <string name="sending_email_failed">Sending email failed</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="email_changed_successfully">Email Changed Successfully</string>
    <string name="failed_to_change_email">Failed to change Email</string>
    <string name="failed_to_change_user_name">Failed to change User Name</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="failed_to_change_password">Failed to change Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="password_alteast_6_chars">Password should have atlest 6 characters</string>
    <string name="hint_new_user_name">New User Name</string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_re_enter_password">Re-enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="phone_should_not_be_empty">Phone should not be empty</string>
    <string name="password_atleast_6_chars">Password should be altest six characters</string>
    <string name="password_should_not_be_empty">Password should not be empty</string>
    <string name="password_does_not_matches">Password does not matches</string>
    <string name="registering">Registering</string>
    <string name="account_registered_successfully">Account Registered Successfully</string>
    <string name="creating_user_failed">Creating user failed</string>
    <string name="username_should_not_be_empty">User Name should not be empty</string>
    <string name="account_will_deleted_permanently">Account will be deleted permanently</string>
    <string name="account_deleted_successfully">Account Deleted Successfully</string>
    <string name="failed_to_delete_account">Failed to delete account</string>
    <string name="app_id">ca-app-pub-4886558654831307~5194888076</string>
    <string name="ad_banner">ca-app-pub-4886558654831307/6671621270</string>
    <string name="ad_banner2">ca-app-pub-4886558654831307/3536038070</string>
    <string name="current_password">Current Password</string>
    <string name="phone">Phone Number</string>
    <string name="next">Next</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="phone91">+91</string>
    <string name="enter_phone_no">Enter Phone Number</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="get_otp">Get OTP</string>
</resources>