<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/item_corner"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/enter_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/enter_phone_no" />

    <LinearLayout
        android:id="@+id/phone_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_verification_code"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/item_corner"
            android:padding="5dp"
            android:text="@string/phone91"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/login_phone"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_corner"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:minWidth="135dp"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tool:text="7448601782" />
    </LinearLayout>

    <com.mukesh.OtpView
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_input"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:visibility="invisible"
        app:length="6"
        app:space="2dp"
        app:width="36dp"
        tool:otp="123456" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="invisible" />

    <Button
        android:id="@+id/get_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:text="@string/get_otp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</RelativeLayout>