<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/xo_status_header"
        android:text="@string/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/xo_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/xo_status_header"
        android:gravity="center"
        />

    <TableLayout
        android:id="@+id/XOBoardTableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/xo_status_text"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/TL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:text="-" />

            <Button
                android:id="@+id/TM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:text="-" />

            <Button
                android:id="@+id/TR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:text="-" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ML"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:text="-" />

            <Button
                android:id="@+id/MM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:text="-" />

            <Button
                android:id="@+id/MR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:text="-" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/BL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:text="-" />

            <Button
                android:id="@+id/BM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:text="-" />

            <Button
                android:id="@+id/BR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:text="-" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/reset"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/XOBoardTableLayout1"
        android:layout_alignStart="@id/XOBoardTableLayout1"
        android:layout_below="@id/XOBoardTableLayout1"
        android:layout_centerInParent="false"
        android:layout_marginTop="50dp"
        android:text="@string/reset" />

    <Button
        android:id="@+id/confirm"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/XOBoardTableLayout1"
        android:layout_alignEnd="@id/XOBoardTableLayout1"
        android:layout_below="@id/XOBoardTableLayout1"
        android:layout_centerInParent="false"
        android:layout_marginTop="50dp"
        android:text="@string/confirm" />

</RelativeLayout>

